# Re-Wittmann-TDWMFC-2024

./: .gitignore  .pre-commit-config.yaml  README.md  _typos.toml  pyproject.toml
.github/workflows/: format-deptry-check.yaml
assets/: af-notes.qmd  glossary.qmd  references.bib
assets/blog_post/: on_tdwmfc_2024_replication.md
assets/experiments/fig_01_2025-01-04_14/: fig_01_2025-01-04_14.json
assets/experiments/fig_02_2025-01-04_14/: fig_02_2025-01-04_14.json
assets/experiments/fig_03_2025-01-04_14/: fig_03_2025-01-04_14.json
assets/experiments/fig_08_2025-01-04_14/: fig_08_2025-01-04_14.json
assets/experiments/fig_09_2025-01-04_14/: fig_09_2025-01-04_14.json
assets/experiments/fig_10_2025-01-04_14/: fig_10_2025-01-04_14.json
assets/experiments/fig_11_2025-01-04_14/: fig_11_2025-01-04_14.json
assets/misc/: resources.md
src/: DFM.py  exp_setup.py  fig_01.py
src/figures/: fig_01.py  fig_02.py  fig_03.py  fig_04.py  fig_05.py  fig_06.py  fig_07.py  fig_08.py  fig_09.py  fig_10.py  fig_11.py
