[project]
name = "re-tdwmfc-wittmann"
version = "0.0.1"
authors = [
  {name = "AFg6K7h4fhy2", email = "127630341+AFg6K7h4fhy2@users.noreply.github.com"},
]
description = "A partial replication in Python of the 2024 paper (The Demographic-Wealth model for cliodynamics) by Wittmann and Kuehn."
license = "Apache-2.0"
readme = "README.md"
keywords = ["cliodynamics", "python", "modeling", "mathematics", "demography", "history"]
requires-python = ">=3.13"
dependencies = [
    "diffrax>=0.7.0",
]

[project.urls]
"Repository Issues" = "https://github.com/AFg6K7h4fhy2/Re-TDWMFC-2024/issues"
"Author Homepage" = "https://github.com/AFg6K7h4fhy2"

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.deptry]
pep621_dev_dependency_groups = ["dev", "test"]
